# consumer-price-index

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  daily_index.h
test/: CMakeLists.txt  daily_index.cpp
